# learning-birds

./: Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
app/: index.html  package-lock.json  package.json
app/src/: App.module.css  App.tsx  RenderSim.tsx  SimDrawer.tsx
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: crossover_method.rs  lib.rs  mutation_method.rs  selection_method.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs  observer.rs  timer.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
solid/: package-lock.json  package.json  vite.config.ts
solid/src/: App.tsx  Sim.tsx  index.tsx
src/: main.rs  render.rs
