[package]
name = "genetic_nn"
version = "0.1.0"
edition = "2021"

[workspace]
members=[
    "libs/*"
]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
limelight-yew = "0.1.0"
simulation-wasm = { path = "./libs/simulation-wasm" }
wasm-bindgen = { version = "0.2.82"}
wasm-logger = "0.2.0"
log = "0.4.17"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d"
]