[package]
name = "genetic_nn"
version = "0.1.0"
edition = "2021"

[workspace]
members=[
    "libs/*"
]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
limelight-yew = "0.1.0"
lib-simulation = { path = "./libs/simulation" }
wasm-bindgen = { version = "0.2.82"}
wasm-logger = "0.2.0"
log = "0.4.17"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d"
]