[package]
name = "lib-neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["serde"] }
nalgebra = "0.31.1"
rand = "0.8.5"

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.11"
rand_chacha = "0.3.1"