[package]
name = "simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
lib-simulation = { path = "../simulation" }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-logger = "0.2.0"
rayon = "1.5.3"
# TODO: Figure out how to enable
# wasm-bindgen-rayon = "1.0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
